fixed relative paths and python version

--- a/notebooks/Experiment_comparison_GD.ipynb
+++ b/notebooks/Experiment_comparison_GD.ipynb
@@ -76,7 +76,7 @@
     "handle = 'comparison_to_gd'\n",
     "\n",
     "host_config = {\n",
-    "    'output_dir': '/media/data/sherlock/results'\n",
+    "    'output_dir': '../data/'\n",
     "}\n",
     "\n",
     "fixed_params = {\n",
