--- a/notebooks/Visualization_comparison_GD.ipynb
+++ b/notebooks/Visualization_comparison_GD.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +166,7 @@
     }
    ],
    "source": [
-    "df = pd.read_pickle(filepath_or_buffer=\"./data/comparison_to_gd_20201120_151226.pkl\")\n",
+    "df = pd.read_pickle(filepath_or_buffer=\"../data/comparison_to_gd_20201120_151226.pkl\")\n",
     "df = df.drop(axis=1, labels=[\"losses_gd\"])\n",
     "df.head()"
    ]
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -206,12 +206,12 @@
     "#ax.set_ylabel(\"Mean squared error\")\n",
     "ax.set_title(\"MSE of the estimated network\")\n",
     "ax.legend()\n",
-    "f.savefig(\"plots/pltMSE.pdf\",dpi=300)"
+    "f.savefig(\"../plots/pltMSE.pdf\",dpi=300)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -235,12 +235,12 @@
     "#ax.set_ylabel(\"Linf error\")\n",
     "ax.set_title(\"Approximation error in the uniform norm\")\n",
     "ax.legend()\n",
-    "f.savefig(\"plots/pltLinferror.pdf\",dpi=300)"
+    "f.savefig(\"../plots/pltLinferror.pdf\",dpi=300)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -266,12 +266,12 @@
     "ax.set_title(\"Approximation error of A in Frobenius norm\")\n",
     "#ax.set_ylabel(r\"dist$(A, \\tilde{A})$\")\n",
     "ax.legend()\n",
-    "f.savefig(\"plots/pltAsamples.pdf\",dpi=300)"
+    "f.savefig(\"../plots/pltAsamples.pdf\",dpi=300)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +295,7 @@
     "ax.set_title('Approximation error of grad_desc')\n",
     "#ax.set_ylabel(r\"dist$(A, \\tilde{A})$\")\n",
     "ax.legend()\n",
-    "f.savefig(\"plots/graddescLoss.pdf\",dpi=300)"
+    "f.savefig(\"../plots/graddescLoss.pdf\",dpi=300)"
    ]
   },
   {
