--- a/notebooks/Visualization_recovery.ipynb
+++ b/notebooks/Visualization_recovery.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -136,13 +136,13 @@
        "4                      0.0                0.0  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_pickle(filepath_or_buffer=\"./data/recovery_heatmap_20201129_120528.pkl\")\n",
+    "df = pd.read_pickle(filepath_or_buffer=\"../data/recovery_heatmap_20201129_120528.pkl\")\n",
     "df.head()"
    ]
   },
@@ -176,7 +176,7 @@
    "source": [
     "f,ax=plt.subplots(figsize=(8,4))\n",
     "sns.heatmap(data.pivot(index=\"eps_A\", columns=\"number_hessians\", values=\"found_all_weights\"), cmap=\"gray\", ax=ax)\n",
-    "f.savefig(\"plots/pltMSE.pdf\",dpi=300)"
+    "f.savefig(\"../plots/pltMSE.pdf\",dpi=300)"
    ]
   },
   {
