fixed relative path

--- a/notebooks/Experiment_recovery.ipynb
+++ b/notebooks/Experiment_recovery.ipynb
@@ -57,7 +57,7 @@
     "handle = 'recovery_heatmap'\n",
     "\n",
     "host_config = {\n",
-    "    'output_dir': './data'\n",
+    "    'output_dir': '../data'\n",
     "}\n",
     "\n",
     "fixed_params = {\n",
